--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "6.1.4",
     "@nestjs/testing": "9.2.1",
     "@nestjs/typeorm": "9.0.1",
+    "@prisma/client": "^5.2.0",
     "@types/config": "3.3.0",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.15",
@@ -90,6 +91,7 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
-    "@types/passport-jwt": "3.0.8"
+    "@types/passport-jwt": "3.0.8",
+    "prisma": "^5.2.0"
   }
 }
